# whisper-task

./: .cz-config.js  .gitignore  README.md
backend/: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 68d1e65b0e2a_whisper_task_cmd.py  993542c06a4d_remove_incoming_file_foreignkey.py  cde085d03ca2_init.py  f7226e027171_remove_relasion.py
backend/app/: api.py  cache.py  constraints.py  crud.py  db.py  logger.py  main.py  minimal_api.py  model.py  prompt.md  schema.py  task.py  whisper.py
backend/app/hooks/: __init__.py  processListener.py  subTaskProcessListener.py  whisperProcessHook.py
backend/scripts/: alembic_autogenerate.sh  alembic_update.sh  run_local_celery_worker.sh  run_local_test.sh
backend/tests/: conftest.py  test_crud.py  test_task.py
frontend/: .prettierrc  example.env  jsconfig.json  package.json
frontend/src/: App.js  index.jsx
frontend/src/components/: Menu.js  ScanLogs.js  SchedulerTaskLogs.tsx  Settings.js  SettingsForm.js  TaskLogs.jsx  WhisperTaskList.jsx
frontend/src/store/: scanLogsReducer.js  scanLogsSlice.js  settingsSlice.js  store.js  types.js
frontend/src/theme/: theme.js
frontend/src/utils/: apiClient.js
frontend_new/: .eslintrc.json  .prettierignore  jsconfig.json  package.json  tailwind.config.js
frontend_new/src/: App.js  const.js
frontend_new/src/components/: AppBar.js  SettingsDialog.js  TaskLogs.js
vite-frontend/: package.json  tailwind.config.js
vite-frontend/src/: App.tsx  constrants.tsx  index.css  main.tsx
(+7 files in other folders)
